--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
             <div
               class="text-[#FEC267] absolute top-14 -translate-x-full -ml-8 side hidden sm:block"
             >
-              <div class="mb-4">Private Sale Starts at</div>
+              <div class="mb-4">Pre Sale Starts at</div>
               <div class="flex text-white gap-3 text-3xl items-center mb-5">
-                <div class="text-[5rem] leading-[5rem]">01</div>
+                <div class="text-[5rem] leading-[5rem]">05</div>
                 <div>Jun<br />2022</div>
               </div>
               <a
@@ -580,7 +580,7 @@
                         Benefit from the Future.
                       </h2>
                       <p class="mb-4">
-                        The GGCMM team is a group of open-minded, enthusiast
+                        The GGCM team is a group of open-minded, enthusiast
                         people from Mongolia who are here to make it possible
                         for anybody to own gold by tokenizing it and placing it
                         on the blockchain via decentralized access. The team was
@@ -653,7 +653,7 @@
                         <span class="text-[#FEC267]">the gold</span> for you!
                       </h2>
                       <p class="mb-6 text-xl">
-                        GGCMM will hold the gold amount in reserves that
+                        GGCM will hold the gold amount in reserves that
                         corresponding to 30 percent of the market value of the
                         tokens in circulation.
                       </p>
@@ -690,7 +690,7 @@
                     <div
                       class="bg-[#E8E8E8] text-[#5A554F] rounded-[1.25rem] shadow-[0px_10px_20px_#FEC267] pt-6 sm:pt-12 pr-3 sm:pr-5 pb-3 sm:pb-6 pl-5 sm:pl-7 py-28 text-xl sm:text-3xl font-bold"
                     >
-                      As GGCMM, we have a business venture in Turkey called
+                      As GGCM, we have a business venture in Turkey called
                       "Gold Guaranteed Yazılım ve Teknoloji Ltd. Şti.".
                     </div>
                   </div>
@@ -808,9 +808,9 @@
                       through here.
                     </p>
                     <div class="flex justify-between">
-                      <a href="#" target="_blank">
+                      <a href="./Whitepaper GGCM 2022.pdf" target="_blank" style="z-index: 999999;">
                         <button
-                          class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-[0.875rem] text-[#F1F1F1] rounded-lg"
+                          class="border-2 border-[#4B4743] "
                         >
                           <img src="img/button-eye.svg" alt="" />
                           Read
@@ -853,12 +853,12 @@
                 than ever
               </h2>
               <p class="mb-2">
-                <span class="text-[#FEC267]">GGCMM</span> offers a safe, secure
+                <span class="text-[#FEC267]">GGCM</span> offers a safe, secure
                 opportunity to invest in
                 <span class="text-[#FEC267]">gold</span>.
               </p>
               <p class="mb-2">
-                The gold amount in reserves held by GGCMM will be equal to 30%
+                The gold amount in reserves held by GGCM will be equal to 30%
                 of the market value of the tokens in circulation. Our main goal
                 is to make mining easier and more accessible to the public, so
                 that more and more people can earn some profits from the current
@@ -871,7 +871,7 @@
               >
                 <div>Check out Litepaper</div>
                 <div class="flex gap-9">
-                  <a href="./Whitepaper GGCMM 2022.pdf" target="_blank">
+                  <a href="./Whitepaper GGCMM 2022.pdf" target="_blank" style="z-index: 999999;">
                     <button
                       class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-[0.875rem] text-[#F1F1F1] rounded-lg"
                     >
@@ -953,7 +953,7 @@
       <section class="py-12 xl:py-36 bg-[#020202] text-white" id="s-5">
         <div class="container">
           <h2 class="text-3xl sm:text-7xl mb-8 sm:mb-11">
-            How to Buy <span class="text-[#FEC267]">GGCMM Token</span> from
+            How to Buy <span class="text-[#FEC267]">GGCM Token</span> from
             Dashboard?
           </h2>
           <div class="flex justify-center mb-24 fix-watch" id="watch">
@@ -1025,8 +1025,8 @@
               asset-backed cryptocurrencies may be a good option.
             </p>
             <p class="text-[1.25rem] text-[#FEC267] s6-content">
-              GGCMM's mission is to tokenize gold and make it more accessible to
-              individuals through the blockchain. GGCMM has all of the necessary
+              GGCM's mission is to tokenize gold and make it more accessible to
+              individuals through the blockchain. GGCM has all of the necessary
               permits and authorization for mining ventures under Mongolian law.
             </p>
           </div>
@@ -1173,7 +1173,7 @@
           class="container flex flex-col sm:flex-row justify-between items-center gap-3"
           id="footer-content"
         >
-          <div>2022&copy; GGCMM</div>
+          <div>2022&copy; GGCM</div>
           <div class="flex gap-3 md:gap-4 lg:gap-[60px]">
             <a
               href="https://www.facebook.com/GGCM-Gold-Guaranteed-Coin-Mining-112589574750515"
@@ -1313,6 +1313,95 @@
                 </defs>
               </svg>
             </a>
+            <a
+            href="https://www.linkedin.com/company/ggcm-official/"
+            target="_blank"
+            class="group"
+          >
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="transition-all group-hover:drop-shadow-[0px_10px_20px_#FEC267]"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"
+                fill="white"
+                class="transition-all group-hover:fill-[#FEC267]"
+              />
+            </svg>
+          </a>
+          <a
+          href="https://wa.me/905441770998"
+          target="_blank"
+          class="group"
+        >
+          <svg
+            width="40"
+            height="40"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="transition-all group-hover:drop-shadow-[0px_10px_20px_#FEC267]"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="m2.004 22 1.352-4.968A9.954 9.954 0 0 1 2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10a9.954 9.954 0 0 1-5.03-1.355L2.004 22zM8.391 7.308a.961.961 0 0 0-.371.1 1.293 1.293 0 0 0-.294.228c-.12.113-.188.211-.261.306A2.729 2.729 0 0 0 6.9 9.62c.002.49.13.967.33 1.413.409.902 1.082 1.857 1.971 2.742.214.213.423.427.648.626a9.448 9.448 0 0 0 3.84 2.046l.569.087c.185.01.37-.004.556-.013a1.99 1.99 0 0 0 .833-.231 4.83 4.83 0 0 0 .383-.22s.043-.028.125-.09c.135-.1.218-.171.33-.288.083-.086.155-.187.21-.302.078-.163.156-.474.188-.733.024-.198.017-.306.014-.373-.004-.107-.093-.218-.19-.265l-.582-.261s-.87-.379-1.401-.621a.498.498 0 0 0-.177-.041.482.482 0 0 0-.378.127v-.002c-.005 0-.072.057-.795.933a.35.35 0 0 1-.368.13 1.416 1.416 0 0 1-.191-.066c-.124-.052-.167-.072-.252-.109l-.005-.002a6.01 6.01 0 0 1-1.57-1c-.126-.11-.243-.23-.363-.346a6.296 6.296 0 0 1-1.02-1.268l-.059-.095a.923.923 0 0 1-.102-.205c-.038-.147.061-.265.061-.265s.243-.266.356-.41a4.38 4.38 0 0 0 .263-.373c.118-.19.155-.385.093-.536-.28-.684-.57-1.365-.868-2.041-.059-.134-.234-.23-.393-.249-.054-.006-.108-.012-.162-.016a3.385 3.385 0 0 0-.403.004z"
+              fill="white"
+              class="transition-all group-hover:fill-[#FEC267]"
+            />
+          </svg>
+        </a>
+          <a
+              href="https://t.me/GGCMAnnouncements"
+              target="_blank"
+              class="group"
+            >
+              <svg
+                width="40"
+                height="40"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class="transition-all group-hover:drop-shadow-[0px_10px_20px_#FEC267]"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M16 .5C7.437.5.5 7.438.5 16S7.438 31.5 16 31.5c8.563 0 15.5-6.938 15.5-15.5S24.562.5 16 .5zm7.613 10.619-2.544 11.988c-.188.85-.694 1.056-1.4.656l-3.875-2.856-1.869 1.8c-.206.206-.381.381-.781.381l.275-3.944 7.181-6.488c.313-.275-.069-.431-.482-.156l-8.875 5.587-3.825-1.194c-.831-.262-.85-.831.175-1.231l14.944-5.763c.694-.25 1.3.169 1.075 1.219z"
+                  fill="white"
+                  class="transition-all group-hover:fill-[#FEC267]"
+                />
+              </svg>
+            </a>
+            <a
+            href="https://www.reddit.com/r/GoldGuaranteedCoinM/comments/v1u7rc/ggcm/?utm_source=share&utm_medium=mweb3x"
+            target="_blank"
+            class="group"
+          >
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 32 32"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="transition-all group-hover:drop-shadow-[0px_10px_20px_#FEC267]"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M12.594 19.094a1.548 1.548 0 0 1-1.556-1.538c0-.862.694-1.556 1.556-1.556.85 0 1.538.694 1.538 1.556 0 .85-.694 1.538-1.538 1.538zM31.5 16c0 8.563-6.938 15.5-15.5 15.5S.5 24.562.5 16C.5 7.437 7.438.5 16 .5S31.5 7.438 31.5 16zm-8.269-2.575c-.587 0-1.106.244-1.488.625-1.4-.969-3.287-1.594-5.381-1.663l1.087-4.894 3.463.781c0 .85.694 1.538 1.537 1.538.863 0 1.556-.706 1.556-1.556S23.311 6.7 22.449 6.7c-.606 0-1.125.363-1.381.863l-3.825-.85c-.188-.05-.381.088-.431.275l-1.194 5.4c-2.075.088-3.944.706-5.344 1.675a2.07 2.07 0 0 0-1.506-.637c-2.181 0-2.894 2.931-.9 3.925a4.496 4.496 0 0 0-.106.969c0 3.287 3.7 5.95 8.25 5.95 4.569 0 8.269-2.663 8.269-5.95 0-.331-.038-.675-.119-.988 1.956-1 1.237-3.906-.931-3.906zm-4.306 7.263c-1.137 1.137-4.756 1.119-5.85 0a.38.38 0 0 0-.519 0c-.156.156-.156.4 0 .538 1.425 1.425 5.456 1.425 6.888 0 .156-.138.156-.381 0-.538a.38.38 0 0 0-.519 0zM19.406 16c-.85 0-1.538.694-1.538 1.556A1.548 1.548 0 1 0 19.406 16z"
+                fill="white"
+                class="transition-all group-hover:fill-[#FEC267]"
+              />
+            </svg>
+          </a>
+          
           </div>
           <div>Made with <span class="text-[#FEC267]">KAF</span></div>
         </div>
