--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                       through here.
                     </p>
                     <div class="flex justify-between">
-                      <a href="./Whitepaper GGCM 2022.pdf" target="_blank" style="z-index: 999999;">
+                      <a rel="noopener noreferrer" href="./WhitepaperGGCM2022.pdf" target="_blank" style="z-index: 999999;">
                         <button
                           class="border-2 border-[#4B4743] "
                         >
@@ -871,7 +871,7 @@
               >
                 <div>Check out Litepaper</div>
                 <div class="flex gap-9">
-                  <a href="./Whitepaper GGCMM 2022.pdf" target="_blank" style="z-index: 999999;">
+                  <a href="./WhitepaperGGCM2022.pdf" target="_blank" style="z-index: 999999;">
                     <button
                       class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-[0.875rem] text-[#F1F1F1] rounded-lg"
                     >
@@ -959,8 +959,8 @@
           <div class="flex justify-center mb-24 fix-watch" id="watch">
             <div class="fix-btn-group">
               <button class="fix-btn" onclick="videobtn1()">1) How sign up to backoffice</button>
-              <button class="fix-btn" onclick="videobtn2()">2) How to create deposit address?</button>
               <button class="fix-btn" onclick="videobtn3()">3) How to buy GGCM from backoffice</button>
+              <button class="fix-btn" onclick="videobtn2()">2) How to create deposit address?</button>
             </div>
             <video
               id="videoscreen"
@@ -981,7 +981,7 @@
           </div>
           <div class="flex justify-center">
             <a
-              href="https://dashboard.GGCMm.io/auth/register"
+              href="https://dashboard.ggcm.io/auth/register"
               class="text-xl sm:text-6xl text-[#FEC267] border-4 sm:border-[5px] border-[#FEC267] inline-flex items-center gap-3 sm:gap-20 py-2 sm:py-4 pl-6 sm:pl-16 pr-8 sm:pr-24 rounded-[20px] hover:drop-shadow-[0px_10px_20px_#FEC267]"
             >
               <lottie-player
@@ -1040,7 +1040,7 @@
             <div
               class="bg-[#FAFAFA] shadow-[0px_10px_20px_#FEC267] rounded-xl pt-12 pr-5 pb-28 pl-8 lg:-translate-y-20"
             >
-              <div class="flex justify-between items-center mb-12 sm:mb-24">
+              <div class="flex justify-between items-center mb-6 sm:mb-12">
                 <h3 class="w-2/3 text-2xl sm:text-[2.5rem]">
                   Passive Income with NFT Shares.
                 </h3>
@@ -1062,7 +1062,7 @@
             <div
               class="bg-[#FAFAFA] shadow-[0px_10px_20px_#FEC267] rounded-xl pt-12 pr-5 pb-28 pl-8 lg:translate-y-20"
             >
-              <div class="flex justify-between items-center mb-12 sm:mb-24">
+              <div class="flex justify-between items-center mb-6 sm:mb-12">
                 <h3 class="w-2/3 text-2xl sm:text-[2.5rem]">
                   Minimize your risk.
                 </h3>
@@ -1087,7 +1087,7 @@
             <div
               class="bg-[#FAFAFA] shadow-[0px_10px_20px_#FEC267] rounded-xl pt-12 pr-5 pb-28 pl-8"
             >
-              <div class="flex justify-between items-center mb-12 sm:mb-24">
+              <div class="flex justify-between items-center mb-6 sm:mb-12">
                 <h3 class="w-2/3 text-2xl sm:text-[2.5rem]">
                   Protect holders from market fluctuations.
                 </h3>
@@ -1147,17 +1147,17 @@
         <div
           class="container flex flex-col xl:flex-row justify-between xl:items-center"
         >
-          <div class="text-4xl md:text-6xl xl:text-7xl">Join for</div>
+          <div style="padding-top: 5rem;" class="text-4xl md:text-6xl xl:text-7xl">Join for</div>
           <div id="wheel-3">
-            <img src="img/wheel/1.svg" alt="" />
-            <img src="img/wheel/2.svg" alt="" />
-            <img src="img/wheel/3.svg" alt="" />
+            <img style="padding-bottom: 1rem;" src="img/wheel/1.svg" alt="" />
+            <img style="padding-bottom: 2rem;" src="img/wheel/2.svg" alt="" />
+            <img style="padding-bottom: 2rem;" src="img/wheel/3.svg" alt="" />
             <img src="img/wheel/4.svg" alt="" />
           </div>
-          <div class="text-5xl md:text-6xl xl:text-7xl">
-            <span
+          <div style="padding-top: 5rem;" class="text-5xl md:text-6xl xl:text-7xl">
+            <span 
               class="relative after:content-[' '] after:absolute after:top-full after:inset-x-0 after:-translate-y-1 after:sm:-translate-y-3 after:h-[5px] after:sm:h-[10px] after:bg-[#FEC267] hover:after:shadow-[0px_10px_20px_#FEC267]"
-              >Joın toda</span
+              >Join toda</span
             >y<span
               class="relative after:content-[' '] after:absolute after:top-full after:inset-x-0 after:-translate-y-1 after:sm:-translate-y-3 after:h-[5px] after:sm:h-[10px] after:bg-[#FEC267] hover:after:shadow-[0px_10px_20px_#FEC267]"
               >!</span
